--- a/starship.toml
+++ b/starship.toml
@@ -12,12 +12,16 @@ format = "($style) "
 disabled = false
 show_always = true
 
-
+[directory.substitutions]
+"Documents" = "󰈙 "
+"Downloads" = " "
+"Music" = "󰝚 "
+"Pictures" = " "
+"Developer" = "󰲋 "
 
 [character]                            # The name of the module we are configuring is "character"
 success_symbol = "[ ](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 error_symbol = "[✗](bold red)"
-
 
 
 #  
@@ -28,24 +32,34 @@ truncation_length = 10
 truncate_to_repo = true # truncates directory to root folder if in github repo
 #style = "bold blue"
 
+[os.symbols]
+Windows = "󰍲"
+Ubuntu = "󰕈"
+SUSE = ""
+Raspbian = "󰐿"
+Mint = "󰣭"
+Macos = "󰀵"
+Manjaro = ""
+Linux = "󰌽"
+Gentoo = "󰣨"
+Fedora = "󰣛"
+Alpine = ""
+Amazon = ""
+Android = ""
+Arch = "󰣇"
+Artix = "󰣇"
+CentOS = ""
+Debian = "󰣚"
+Redhat = "󱄛"
+RedHatEnterprise = "󱄛"
 
 [aws]
 symbol = "  "
 
-[conda]
-symbol = " "
-
-[dart]
-symbol = " "
 
 [docker_context]
 symbol = " "
 
-[elixir]
-symbol = " "
-
-[elm]
-symbol = " "
 
 [git_branch]
 symbol = " "
@@ -71,8 +85,6 @@ symbol = " "
 [java]
 symbol = " "
 
-[julia]
-symbol = " "
 
 [haskell]
 symbol = " "
@@ -80,11 +92,6 @@ symbol = " "
 [memory_usage]
 symbol = " "
 
-[nim]
-symbol = " "
-
-[nix_shell]
-symbol = " "
 
 [package]
 symbol = "󰏗 "
@@ -104,14 +111,14 @@ symbol = " "
 [rust]
 symbol = " "
 
-[scala]
-symbol = " "
-
 [shlvl]
 symbol = " "
 
 [swift]
 symbol = " "
+
+[c]
+symbol = " "
 
 [nodejs]
 symbol = "󰎙 "
