--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -69,9 +69,9 @@ TERM = "xterm-256color"
 general = "Alacritty"
 instance = "Alacritty"
 
-#[window.padding]
-#x = 6
-#y = 6
+[window.padding]
+x = 0
+y = 0
 
 #Tokyo Night normal
 [colors.normal]
