--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -142,6 +142,8 @@ inactive-dim-fixed = 1.0
 opacity-rule = [
 	"90:class_g = 'Alacritty' && focused",
 	"80:class_g = 'Alacritty' && !focused",
+	"90:class_g = 'Geany' && focused",
+	"80:class_g = 'Geany' && !focused",
 	"70:class_g = 'Rofi'"
 
 
