--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -144,6 +144,10 @@ opacity-rule = [
 	"80:class_g = 'Alacritty' && !focused",
 	"90:class_g = 'Geany' && focused",
 	"80:class_g = 'Geany' && !focused",
+	"90:class_g = 'Nemo' && focused",
+	"80:class_g = 'Nemo' && !focused",
+	"80:class_g = 'Nitrogen' && !focused",
+	"80:class_g = 'Nitrogen' && focused",
 	"70:class_g = 'Rofi'"
 
 
