--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -147,7 +147,11 @@ opacity-rule = [
 	"90:class_g = 'Nemo' && focused",
 	"80:class_g = 'Nemo' && !focused",
 	"80:class_g = 'Nitrogen' && !focused",
-	"80:class_g = 'Nitrogen' && focused",
+	"90:class_g = 'Nitrogen' && focused",
+	#"90:class_g = 'VirtualBox Manager' && focused",
+	"90:class_g = 'VirtualBox Manager' && !focused",
+	#"90:class_g = 'Virt-manager' && focused",
+	"90:class_g = 'Virt-manager' && !focused",
 	"70:class_g = 'Rofi'"
 
 
