--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -152,6 +152,8 @@ opacity-rule = [
 	"90:class_g = 'VirtualBox Manager' && !focused",
 	#"90:class_g = 'Virt-manager' && focused",
 	"90:class_g = 'Virt-manager' && !focused",
+	"80:class_g = 'steam' && !focused",
+	"90:class_g = 'steam' && focused",
 	"70:class_g = 'Rofi'"
 
 
